# mining-sim

./: .gitignore  CMakeLists.txt  README.txt
01-cylinders/: CMakeLists.txt  main.cpp  world.urdf
02-capsuleEatsBall/: CMakeLists.txt  main.cpp
03-capsule1D/: CMakeLists.txt  main.cpp
04-capsule2D/: CMakeLists.txt  main.cpp
04-capsule2D-voxel-force/: CMakeLists.txt  main.cpp
04-capsuleDrill2D/: CMakeLists.txt  main.cpp
05-voxelCollision/: CMakeLists.txt  main original back up.cpp  main.cpp  main_1_drill_3D_movement.cpp  main_2D_Dr_vC_color.cpp  main_2_drills.cpp  main_3D_Dr_vC_color(latest version of main).cpp  main_3d_2_drills_wait_to_add_x_dimension.cpp  main_two_drills_2D.cpp  main_will_be_modified.cpp  voxelBoxNode_not_used.cpp  voxelCollision_not_used.cpp
05-voxelCollision/back up .h files/: drill.h  voxelCollision.h
06-generalAlgorithm/: CMakeLists.txt  drill.h  main.cpp  voxelCollision.h
07-drill2DWithObj/: CMakeLists.txt  main.cpp
08-generalAlgorithmWithObj/: CMakeLists.txt  main.cpp  voxelCollision.h
09-wholeRobot/: CMakeLists.txt  drill.h  main-backup.cpp  main.cpp  voxelBox.h
10-noStickyGeneralAlgorithm/: CMakeLists.txt  drill.h  main.cpp
11-noStickyWholeRobot/: CMakeLists.txt  main.cpp
12-capsuleDrill2D-torque/: CMakeLists.txt  main copy.cpp  main.cpp
16-ERotation/: CMakeLists.txt  main-backup.cpp  main.cpp  main_test_Eigen.cpp
17-WholeRobotDrillingSimulation/: CMakeLists.txt  main-backup-5-drills.cpp  main-backup.cpp  main.cpp  voxelBoxNode.h
resources/robot1/: robot1.urdf
resources/robot1/graphics/: brake_cam.mtl  drill1.mtl  rearbody.mtl  roller_cone_drill_bit_02.mtl
resources/world/graphics/: housing1.mtl  housing2.mtl  tunnel.mtl
