# create an executable
ADD_EXECUTABLE (04-capsuleDrill2D 
	${COMMON_SOURCE}
	main.cpp)

# and link the library against the executable
TARGET_LINK_LIBRARIES (04-capsuleDrill2D ${COMMON_LIBRARIES})

# export resources such as model files.
# NOTE: this requires an install build
SET(RESOURCE_DIR ${BINARY_DIR}/resources)
FILE(MAKE_DIRECTORY ${RESOURCE_DIR})
SET(APP_RESOURCE_DIR ${RESOURCE_DIR}/04-capsuleDrill2D)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})




